updated PersonelApi-Logs-Document
