# class-notes/20-PersonnelApi_Logs_Documents/src/controllers/auth.controller.js
@@ -9,19 +9,20 @@ const passwordEncrypt = require("../helpers/passwordEncrypt");
 
 module.exports = {
   login: async (req, res) => {
-    /*
-        #swagger.tags = ['Authentication]
-        #swagger.summary = 'Login'
-        #swagger.description = 'Login with username/email and password'
-        #swagger.parameters['body'] = {
-        in:'body',
-        required: true,
-        schema : {
-        username:'admin',
-        password:'1234'
-        }
-        }
-    */
+    /* 
+            #swagger.tags = ['Authentication']
+            #swagger.summary = 'Login'
+            #swagger.description = 'Login with username/email and password'
+            #swagger.parameters['body'] = {
+                in:'body',
+                required: true,
+                schema:{
+                    username:'admin',
+                    password:'1234'
+                }
+
+            }
+        */
 
     const { username, email, password } = req.body;
 
@@ -64,6 +65,12 @@ module.exports = {
   },
 
   logout: async (req, res) => {
+    /*
+            #swagger.tags = ['Authentication']
+            #swagger.summary = 'Logout'
+            #swagger.description = 'Delete token.'
+        */
+
     // let result;
     // if (req.user) {
     //     result = await Token.deleteOne({ userId: req.user._id })
