# class-notes/20-PersonnelApi_Logs_Documents/src/controllers/personnel.controller.js
@@ -1,63 +1,105 @@
-"use strict"
+"use strict";
 /* -------------------------------------------------------
     EXPRESS - Personnel API
 ------------------------------------------------------- */
 
-const Personnel = require('../models/personnel.model');
+const Personnel = require("../models/personnel.model");
 
 module.exports = {
+  list: async (req, res) => {
+    /*
+            #swagger.tags = ["Personnels"]
+            #swagger.summary = "List Personnels"
+            #swagger.description = `
+                You can send query with endpoint for search[], sort[], page and limit.
+                <ul> Examples:
+                    <li>URL/?<b>filter[field1]=value1&filter[field2]=value2</b></li>
+                    <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>
+                    <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>
+                    <li>URL/?<b>page=2&limit=1</b></li>
+                </ul>
+            `
+        */
 
-    list: async (req, res) => {
+    const result = await res.getModelList(Personnel);
 
-        const result = await res.getModelList(Personnel)
+    res.status(200).send({
+      error: false,
+      details: await res.getModelListDetails(Personnel),
+      result,
+    });
+  },
 
-        res.status(200).send({
-            error: false,
-            details: await res.getModelListDetails(Personnel),
-            result
-        });
-    },
+  create: async (req, res) => {
+    /*
+            #swagger.tags = ["Personnels"]
+            #swagger.summary = "Create Personnel"
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                    $ref: '#/definitions/Personnel'
+                }
+            }
+        */
 
-    create: async (req, res) => {
+    const result = await Personnel.create(req.body);
 
-        const result = await Personnel.create(req.body)
+    res.status(201).send({
+      error: false,
+      result,
+    });
+  },
 
-        res.status(201).send({
-            error: false,
-            result
-        });
-    },
+  read: async (req, res) => {
+    /*
+            #swagger.tags = ["Personnels"]
+            #swagger.summary = "Get Single Personnel"
+        */
 
-    read: async (req, res) => {
+    const result = await Personnel.findOne({ _id: req.params.id });
 
-        const result = await Personnel.findOne({ _id: req.params.id });
+    res.status(200).send({
+      error: false,
+      result,
+    });
+  },
 
-        res.status(200).send({
-            error: false,
-            result
-        });
-    },
+  update: async (req, res) => {
+    /*
+            #swagger.tags = ["Personnels"]
+            #swagger.summary = "Update Personnel"
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                    $ref: '#/definitions/Personnel'
+                }
+            }
+        */
 
-    update: async (req, res) => {
+    const result = await Personnel.updateOne({ _id: req.params.id }, req.body, {
+      runValidators: true, // run validation method
+      new: true, // returns updated data
+    });
 
-        const result = await Personnel.updateOne({ _id: req.params.id }, req.body, {
-            runValidators: true, // run validation method 
-            new: true // returns updated data
-        });
+    res.status(202).send({
+      error: false,
+      result,
+    });
+  },
 
-        res.status(202).send({
-            error: false,
-            result
-        });
-    },
+  delete: async (req, res) => {
+    /*
+            #swagger.tags = ["Personnels"]
+            #swagger.summary = "Delete Personnel"
+        */
 
-    delete: async (req, res) => {
+    const result = await Personnel.deleteOne({ _id: req.params.id });
 
-        const result = await Personnel.deleteOne({ _id: req.params.id });
-
-        res.status(result.deletedCount ? 204 : 404).send({
-            error: true,
-            message: "Data is not found or already deleted."
-        });
-    }
+    res.status(result.deletedCount ? 204 : 404).send({
+      error: true,
+      message: "Data is not found or already deleted.",
+    });
+  },
 };
